// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sidebar shell snapshots > renders the collapsed rail after the crossfade settles, in place 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root collapsed railIn quietBars"
    style=""
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="Open sidebar"
        class="iconButton toggle"
        type="button"
      >
        <span
          aria-hidden="true"
          class="railMark"
        >
          <div
            data-slot="sidebar.brand.mark"
            style="display: contents;"
          >
            <svg
              aria-hidden="true"
              data-content="965fe321"
              fill="none"
              height="17.6580310880829"
              viewBox="0 0 23.16 17.04"
              width="24"
            />
          </div>
        </span>
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="New chat"
      class="newSession"
      type="button"
    >
      <svg
        data-content="a10c56fb"
        fill="none"
        height="18"
        viewBox="0 0 16 16"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
    <button
      aria-label="Search"
      class="newSession"
      type="button"
    >
      <svg
        data-content="4ca56c6d"
        fill="none"
        height="18"
        viewBox="0 0 16 16"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
    <div
      class="navActions"
    >
      <div
        data-slot="sidebar.nav.action"
        style="display: contents;"
      />
    </div>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="identityRow"
      >
        <div
          data-slot="sidebar.account"
          style="display: contents;"
        />
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column (wordmark, capsule, empty holes) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="New chat"
        class="brand wide"
        type="button"
      >
        <span
          aria-hidden="true"
          class="brandIdentity"
        >
          <span
            class="brandMark"
          >
            <div
              data-slot="sidebar.brand.mark"
              style="display: contents;"
            >
              <svg
                aria-hidden="true"
                data-content="965fe321"
                fill="none"
                height="11.7720207253886"
                viewBox="0 0 23.16 17.04"
                width="16"
              />
            </div>
          </span>
          <span
            class="brandName"
          >
            <div
              data-slot="sidebar.brand.name"
              style="display: contents;"
            >
              <span
                class="fallbackBrandName"
              >
                Rabi
              </span>
              <span
                class="buildRevision"
              >
                abc1234
              </span>
            </div>
          </span>
        </span>
      </button>
      <button
        aria-label="Collapse sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="15"
          viewBox="0 0 16 16"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="New chat"
      class="newSession"
      type="button"
    >
      <svg
        data-content="a10c56fb"
        fill="none"
        height="15"
        viewBox="0 0 16 16"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        New chat
      </span>
    </button>
    <button
      aria-label="Search"
      class="newSession"
      type="button"
    >
      <svg
        data-content="4ca56c6d"
        fill="none"
        height="15"
        viewBox="0 0 16 16"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        Search
      </span>
    </button>
    <div
      class="navActions"
    >
      <div
        data-slot="sidebar.nav.action"
        style="display: contents;"
      />
    </div>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="identityRow"
      >
        <div
          data-slot="sidebar.account"
          style="display: contents;"
        />
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column in the default locale (zh, no setLocale) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="新聊天"
        class="brand wide"
        type="button"
      >
        <span
          aria-hidden="true"
          class="brandIdentity"
        >
          <span
            class="brandMark"
          >
            <div
              data-slot="sidebar.brand.mark"
              style="display: contents;"
            >
              <svg
                aria-hidden="true"
                data-content="965fe321"
                fill="none"
                height="11.7720207253886"
                viewBox="0 0 23.16 17.04"
                width="16"
              />
            </div>
          </span>
          <span
            class="brandName"
          >
            <div
              data-slot="sidebar.brand.name"
              style="display: contents;"
            >
              <span
                class="fallbackBrandName"
              >
                Rabi
              </span>
              <span
                class="buildRevision"
              >
                abc1234
              </span>
            </div>
          </span>
        </span>
      </button>
      <button
        aria-label="收起侧边栏"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="15"
          viewBox="0 0 16 16"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="新聊天"
      class="newSession"
      type="button"
    >
      <svg
        data-content="a10c56fb"
        fill="none"
        height="15"
        viewBox="0 0 16 16"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        新聊天
      </span>
    </button>
    <button
      aria-label="搜索"
      class="newSession"
      type="button"
    >
      <svg
        data-content="4ca56c6d"
        fill="none"
        height="15"
        viewBox="0 0 16 16"
        width="15"
        xmlns="http://www.w3.org/2000/svg"
      />
      <span
        class="newSessionLabel wide"
      >
        搜索
      </span>
    </button>
    <div
      class="navActions"
    >
      <div
        data-slot="sidebar.nav.action"
        style="display: contents;"
      />
    </div>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="identityRow"
      >
        <div
          data-slot="sidebar.account"
          style="display: contents;"
        />
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;
